cp: 	PR c++/23797 	* parser.c (cp_parser_functional_cast): Cope when TYPE is not a 	TYPE_DECL.  Use dependent_type_p to check type. 	* pt.c (uses_template_parms_p): Use dependent_type_p for a 	TYPE_DECL. 	(type_dependent_expression_p): Assert we've not been given a 	TYPE_DECL. testsuite: 	PR c++/23797 	* g++.dg/other/typename8.C: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@105312 138bc75d-0d04-0410-961f-82ee72b054a4